# amyloid-probability-adni

./: .gitignore  CITATION.cff  LICENSE  README.md  adni_download_checklist.md  analysis_conventions.md  analysis_conventions_v1.0.md  pyproject.toml
config/: analysis.yaml  paperB_definitions.example.yaml  pipeline.yaml  windows.yaml
scripts/: 00_inventory.py  02_build_canonical_pet.py  03_build_canonical_csf.py  04_build_canonical_plasma_fnibc.py  05_build_canonical_plasma_janssen.py  06_build_paired_triads.py  07_build_manifests.py  08_build_paperA_pack.py  09_build_canonical_plasma_c2n_precivityad2.py  10_build_paperA_manuscript_tables.py  11_build_paperA_docx.py  12_build_paperB_pack.py  13_pubmed_citations.py  14_build_paperB_docx.py  build_all.py
src/adni_analysis/: canonical.py  citations.py  config.py  hardening.py  inventory.py  manifests.py  pairing.py  paper_a.py  paper_b.py  pipeline.py  utils.py
